--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="cd-image-container">
           <img :src="'./laravel/public/' + actual.image" alt="">
           <p class="cd-price">€ {{actual.price}}</p>
+          <div class="in-cart">
+            <img src="img/shopping-cart-filled.png" alt="">
+          </div>
         </div>
         <p class="cd-name">{{actual.name}}</p>
         <p class="cd-info">{{actual.artist}} ({{actual.year}})</p>
