--- a/index.html
+++ b/index.html
@@ -32,22 +32,26 @@
 
     <div v-if="mostrar('portada')"></div>
     <div v-if="mostrar('tienda')" class="tienda">
-      <div v-for="(actual,index) in productes" class="product-container">
+      <div v-for="(actual,index) in productes" :key="index" class="product-container">
         <div class="cd-image-container">
           <img :src="'./laravel/public/' + actual.image" alt="">
           <p class="cd-price">€ {{actual.price}}</p>
-          <div class="in-cart">
+          <div :class="['in-cart',{'bought': findByIndex(productesAddToCart,index)!== -1}]">
             <img src="img/shopping-cart-filled.png" alt="">
           </div>
         </div>
         <p class="cd-name">{{actual.name}}</p>
         <p class="cd-info">{{actual.artist}} ({{actual.year}})</p>
         <div class="add-to-cart-container">
-          <input class="add-to-cart-img" type="image" src="img/cart.jpg" alt="">
+          <input @click="agregarAlCarro(index)" class="add-to-cart-img" type="image" src="img/cart.jpg" alt="">
         </div>
       </div>
     </div>
-    <div v-if="mostrar('carro')"></div>
+    <div v-if="mostrar('carro')">
+      <div v-for="(actual,index) in productesAddToCart" class="product-container">
+        <img :src="'./laravel/public/' + actual.image" alt="">
+      </div>
+    </div>
     <div v-if="mostrar('checkout')"></div>
 
     <div class="container-footer">
