--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>PreSidis</title>
   <link href=" https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css " rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="css/newCSS.css">
@@ -23,14 +23,14 @@
           <img class="search-icon" src="img/search.png" alt="Search">
         </div>
       </div>
+      <div v-else-if="mostrar('carro')" class="header-carro">
+        <h1 class="header__price">€ {{calcularPriceTotal()}}</h1>
+      </div>
     </header>
-    <div v-else>
-      <header>
-
-      </header>
-    </div>
-
+    <!-- PORTADA -->
     <div v-if="mostrar('portada')"></div>
+
+    <!-- TIENDA -->
     <div v-if="mostrar('tienda')" class="tienda">
       <div v-for="(actual,index) in productes" :key="index" class="product-container">
         <div class="cd-image-container">
@@ -42,16 +42,34 @@
         </div>
         <p class="cd-name">{{actual.name}}</p>
         <p class="cd-info">{{actual.artist}} ({{actual.year}})</p>
-        <div class="add-to-cart-container">
-          <input @click="agregarAlCarro(index)" class="add-to-cart-img" type="image" src="img/cart.jpg" alt="">
+        <button @click="agregarAlCarro(index)" class="add-to-cart-container">
+          <img class="add-to-cart-img" src="img/cart.jpg" alt="">
+        </button>
+      </div>
+    </div>
+
+    <!-- CARRO -->
+    <div v-if="mostrar('carro')">
+      <div v-for="(actual,index) in productesAddToCart" class="carro product-container">
+        <img :src="'./laravel/public/' + actual.image" alt="" class="carro cd-image">
+        <div class="carro carro-info">
+          <p class="carro cd-name">{{actual.name}}</p>
+          <p class="carro cd-info">{{actual.artist}} ({{actual.year}})</p>
+          <div class="carro carro-btns">
+            <button @click="substractCountProduct(productesAddToCart,index)">-</button>
+            <input type="text" :placeholder="actual.count" disabled>
+            <button @click="addCountProduct(productesAddToCart,index)">+</button>
+            <p class="carro total-price">€{{calcularPriceProduct(index)}}</p>
+            <button class="deleteCart" @click="deleteProduct(productesAddToCart,index)">Delete</button>
+          </div>
         </div>
       </div>
-    </div>
-    <div v-if="mostrar('carro')">
-      <div v-for="(actual,index) in productesAddToCart" class="product-container">
-        <img :src="'./laravel/public/' + actual.image" alt="">
+      <div class="checkout-btn-container">
+        <button class="goToCheckout">Checkout</button>
       </div>
     </div>
+
+    <!-- CHECKOUT -->
     <div v-if="mostrar('checkout')"></div>
 
     <div class="container-footer">
@@ -77,14 +95,14 @@
               <path d="M15 19l2 2l4 -4"></path>
             </svg>
           </button>
-          <button class="button">
+          <!-- <button class="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="0"
               fill="currentColor" stroke="currentColor" class="icon">
               <path
                 d="M12 2.5a5.5 5.5 0 0 1 3.096 10.047 9.005 9.005 0 0 1 5.9 8.181.75.75 0 1 1-1.499.044 7.5 7.5 0 0 0-14.993 0 .75.75 0 0 1-1.5-.045 9.005 9.005 0 0 1 5.9-8.18A5.5 5.5 0 0 1 12 2.5ZM8 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z">
               </path>
             </svg>
-          </button>
+          </button> -->
 
           <button class="button" @click="cambiarDiv('carro')">
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round"
