--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="csrf-token" content="{{ csrf_token() }}">
   <title>PreSidis</title>
   <link href=" https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css " rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
@@ -65,7 +66,7 @@
         </div>
       </div>
       <div class="checkout-btn-container">
-        <button class="goToCheckout">Checkout</button>
+        <button @click="checkout()" class="goToCheckout">Checkout</button>
       </div>
     </div>
 
