--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- CARRO -->
-    <div v-if="mostrar('carro')">
+    <div class="allCart-container" v-if="mostrar('carro')">
       <div v-for="(actual,index) in productesAddToCart" class="carro product-container">
         <img :src="'./laravel/public/' + actual.image" alt="" class="carro cd-image">
         <div class="carro carro-info">
@@ -66,7 +66,37 @@
         </div>
       </div>
       <div class="checkout-btn-container">
-        <button @click="checkout()" class="goToCheckout">Checkout</button>
+        <button @click="activarModal()" class="button is-dark goToCheckout">Confirmar?</button>
+      </div>
+
+      <div :class="['modal',{'is-active': activeModal}]">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="modal-card-title">Confirma les teves dades</p>
+            <button @click="activarModal()" class="delete" aria-label="close"></button>
+          </header>
+          <section class="modal-card-body">
+
+            <div class="confirm_payment">
+              <label for="user_name">Nom complet</label>
+              <input id="user_name" class="input" v-model="userName" type="text"
+                placeholder="Escriu el teu nom complet...">
+              <label for="user_email">Email</label>
+              <input id="user_email" class="input" v-model="userEmail" type="email" placeholder="exemple@exemple.cat">
+            </div>
+
+          </section>
+          <footer class="modal-card-foot">
+            <button @click="checkout()" class="button is-dark">Confirmar comanda</button>
+            <button @click="activarModal()" class="button">Cancel</button>
+          </footer>
+        </div>
+      </div>
+
+
+      <div class="payment-container">
+
       </div>
     </div>
 
@@ -76,7 +106,7 @@
     <div class="container-footer">
       <footer>
         <div class="button-container">
-          <button class="button" @click="cambiarDiv('portada')">
+          <button class="button-footer" @click="cambiarDiv('portada')">
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024" stroke-width="0"
               fill="currentColor" stroke="currentColor" class="icon">
               <path
@@ -84,7 +114,7 @@
               </path>
             </svg>
           </button>
-          <button class="button" @click="cambiarDiv('tienda')">
+          <button class="button-footer" @click="cambiarDiv('tienda')">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-bag-check" width="24"
               height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
               stroke-linejoin="round">
@@ -96,7 +126,7 @@
               <path d="M15 19l2 2l4 -4"></path>
             </svg>
           </button>
-          <!-- <button class="button">
+          <!-- <button class="button-footer">
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="0"
               fill="currentColor" stroke="currentColor" class="icon">
               <path
@@ -105,7 +135,7 @@
             </svg>
           </button> -->
 
-          <button class="button" @click="cambiarDiv('carro')">
+          <button class="button-footer" @click="cambiarDiv('carro')">
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round"
               stroke-linecap="round" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor"
               class="icon">
