--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <title>PreSidis</title>
-  <script src="https://ssense.github.io/vue-carousel/js/vue-carousel.min.js"></script>
   <link href=" https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css " rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="css/newCSS.css">
@@ -28,7 +27,7 @@
       <div v-else-if="mostrar('carro')" class="header-carro">
         <h1 class="header__price">€ {{calcularPriceTotal()}}</h1>
       </div>
-      <div class="header-landing" v-else-if="mostrar('portada')">
+      <div class="header-landing" v-else-if="mostrar('portada') || mostrar('checkout') || mostrar('check-order')">
         <img class="landing-logo" src="img/presidis.png" alt="">
         <button class="button-footer">
           <svg width="50px" height="50px" stroke="currentColor" viewBox="0 0 24 24" fill="none"
@@ -41,12 +40,24 @@
         </button>
       </div>
     </header>
+
     <!-- PORTADA -->
     <div class="landing-page" v-if="mostrar('portada')">
       <div class="landing-container">
-        <input class="input" type="text" placeholder="Escriu el ID de la teva comanda...">
+        <form @submit.prevent="buscarTicket">
+          <input class="input" v-model="ticketInput" type="text" placeholder="Escriu el ID de la teva comanda...">
+          <button @click="buscarTicket" class="button-footer search-order">
+            <svg width="50x" height="50px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+              stroke="currentColor">
+              <path d="M18.5 18.5L22 22" stroke-width="1" stroke-linecap="round" />
+              <path
+                d="M6.75 3.27093C8.14732 2.46262 9.76964 2 11.5 2C16.7467 2 21 6.25329 21 11.5C21 16.7467 16.7467 21 11.5 21C6.25329 21 2 16.7467 2 11.5C2 9.76964 2.46262 8.14732 3.27093 6.75"
+                stroke-width="1" stroke-linecap="round" />
+            </svg>
+          </button>
+        </form>
         <img :src="'./laravel/public/img/Random-access-memories.jpg' " alt="">
-        <button @click="cambiarDiv('tienda')" class="button">Ir a la tienda</button>
+        <button @click="cambiarDiv('tienda')" class="button is-black">Ir a la tienda</button>
       </div>
     </div>
 
@@ -85,7 +96,7 @@
         </div>
       </div>
       <div class="checkout-btn-container">
-        <button @click="activarModal()" class="button is-dark">Confirmar?</button>
+        <button @click="activarModal()" class="button is-black">Confirmar?</button>
       </div>
 
       <div :class="['modal',{'is-active': activeModal}]">
@@ -116,10 +127,9 @@
                 </div>
               </div>
             </div>
-
           </section>
           <footer class="modal-card-foot">
-            <button @click="checkout()" class="button is-dark">Confirmar comanda</button>
+            <button @click="checkout()" class="button is-black">Confirmar comanda</button>
             <button @click="activarModal()" class="button">Cancel</button>
           </footer>
         </div>
@@ -127,12 +137,90 @@
     </div>
 
     <!-- CHECKOUT -->
-    <div v-if="mostrar('checkout')">
-      <h1>Gràcies per la compra, {{ticket.user_name}}</h1>
-      <h2>El teu id de compra es:</h2>
-      <h3>{{ticket.id}}</h3>
-      <img :src="'./laravel/public/' + ticket.qr" alt="">
-      <button @click="cambiarDiv('portada')" class="button is-dark">Tornar a l'inici</button>
+    <div v-if="mostrar('checkout')" class="checkout">
+      <div class="checkout-container">
+        <p class="checkout-gracies">Gràcies per la teva compra, <span>{{ticket.user_name}}</span></p>
+        <p class="">El teu id de recollida es:</p>
+        <h1 class="checkout-id">{{ticket.id}}</h1>
+        <img class="checkout-qr" :src="'./laravel/public/' + ticket.qr" alt="">
+        <button @click="cambiarDiv('portada')" class="button is-black">Tornar a l'inici</button>
+      </div>
+    </div>
+
+    <!-- CHECK ORDER -->
+    <div v-if="mostrar('check-order')" class="check-order">
+      <div class="checkout-container">
+        <p class="checkout-gracies">Gràcies per la teva compra, <span>{{ticket[0].user_name}}</span></p>
+        <p class="">El teu id de recollida es:</p>
+        <h1 class="checkout-id">{{ticket[0].id}}</h1>
+
+        <div v-if="ticket[0].estat==='Pendent de preparar'" class="pendent-preparar">
+          <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 19L17.5 17.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M19 5L17.5 6.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M5 19L6.5 17.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M5 5L6.5 6.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M2 12H4" stroke-width="1" stroke-linecap="round" />
+            <path d="M19.9998 12L21.9998 12" stroke-width="1" stroke-linecap="round" />
+            <path d="M12 4.00021L12 2.00021" stroke-width="1" stroke-linecap="round" />
+            <path
+              d="M13.7781 14.364C14.9497 13.1924 14.9497 11.2929 13.7781 10.1214C12.6065 8.94978 10.707 8.94978 9.53545 10.1214C9.0898 10.567 8.77857 11.4921 8.56396 12.4675C8.24305 13.926 8.08259 14.6553 8.66339 15.2361C9.24419 15.8169 9.97346 15.6564 11.432 15.3355C12.4073 15.1209 13.3324 14.8096 13.7781 14.364Z"
+              stroke-width="1" />
+            <path
+              d="M9 21.5422C4.94289 20.2679 2 16.4776 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.4776 19.0571 20.2679 15 21.5422"
+              stroke-width="1" stroke-linecap="round" />
+          </svg>
+        </div>
+        <div v-else-if="ticket[0].estat==='En preparació'" class="preparacio">
+          <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M9 21.5422C4.94289 20.2679 2 16.4776 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.4776 19.0571 20.2679 15 21.5422"
+              stroke-width="1" stroke-linecap="round" />
+            <path d="M19 19L17.5 17.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M19 5L17.5 6.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M5 19L6.5 17.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M5 5L6.5 6.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M2 12H4" stroke-width="1" stroke-linecap="round" />
+            <path d="M19.9998 12L21.9998 12" stroke-width="1" stroke-linecap="round" />
+            <path d="M12 4.00021L12 2.00021" stroke-width="1" stroke-linecap="round" />
+            <path
+              d="M15 11.9999C15 13.6567 13.6569 14.9999 12 14.9999C10.3431 14.9999 9 13.6567 9 11.9999C9 11.3696 9.43408 10.4954 9.972 9.65399C10.7764 8.39573 11.1786 7.7666 12 7.7666C12.8214 7.7666 13.2236 8.39573 14.028 9.65399C14.5659 10.4954 15 11.3696 15 11.9999Z"
+              stroke-width="1" />
+          </svg>
+        </div>
+
+        <div v-else-if="ticket[0].estat==='Preparat per recollir'" class="preparat">
+          <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 19L17.5 17.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M19 5L17.5 6.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M5 19L6.5 17.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M5 5L6.5 6.5" stroke-width="1" stroke-linecap="round" />
+            <path d="M2 12H4" stroke-width="1" stroke-linecap="round" />
+            <path d="M19.9998 12L21.9998 12" stroke-width="1" stroke-linecap="round" />
+            <path d="M12 4.00021L12 2.00021" stroke-width="1" stroke-linecap="round" />
+            <path
+              d="M10.1214 14.364C8.94978 13.1924 8.94978 11.2929 10.1214 10.1214C11.2929 8.94978 13.1924 8.94978 14.364 10.1214C14.8096 10.567 15.1209 11.4921 15.3355 12.4675C15.6564 13.926 15.8169 14.6553 15.2361 15.2361C14.6553 15.8169 13.926 15.6564 12.4675 15.3355C11.4921 15.1209 10.567 14.8096 10.1214 14.364Z"
+              stroke-width="1" />
+            <path
+              d="M9 21.5422C4.94289 20.2679 2 16.4776 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.4776 19.0571 20.2679 15 21.5422"
+              stroke-width="1" stroke-linecap="round" />
+          </svg>
+        </div>
+
+        <div v-else-if="ticket[0].estat==='Recollit'" class="recollit">
+          <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M9 14H3" stroke-width="1" stroke-linecap="round" />
+            <path d="M8 18H3" stroke-width="1" stroke-linecap="round" />
+            <path d="M17 16.5V12.5V8" stroke-width="1" stroke-linecap="round" />
+            <circle cx="14.5" cy="16.5" r="2.5" stroke-width="1" />
+            <path d="M21 12C18.7909 12 17 10.2091 17 8" stroke-width="1" stroke-linecap="round" />
+            <path d="M3 6H10.4118M15 6H13.4118" stroke-width="1" stroke-linecap="round" />
+            <path d="M13 10L6.82353 10M3 10H4.32353" stroke-width="1" stroke-linecap="round" />
+          </svg>
+        </div>
+        <p>{{ticket[0].estat}}</p>
+        <button @click="cambiarDiv('portada')" class="button is-black">Tornar a l'inici</button>
+      </div>
     </div>
 
     <!-- <div class="container-footer"> -->
