--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <img :src="'./laravel/public/' + actual.image" alt="">
           </button>
           <p class="cd-price">€ {{actual.price}}</p>
-          <div :class="['in-cart',{'bought': findByIndex(carrito.productesAddToCart,index)!== -1}]">
+          <div :class="['in-cart',{'bought': esRepetido(actual.id)}]">
             <img src="img/shopping-cart-filled.png" alt="">
           </div>
         </div>
