--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <input v-model="navegacion.inputValue" type="text" class="search-input" placeholder="Search...">
           <div class="select is-warning is-rounded">
             <select v-model="navegacion.tipoBusqueda">
-              <option value=1>Pàgina actual</option>
-              <option value=2>A tota la web</option>
+              <option value="1">Pàgina actual</option>
+              <option value="2">A tota la web</option>
             </select>
           </div>
           <img class="search-icon" src="img/search.png" alt="Search">
