--- a/index.html
+++ b/index.html
@@ -21,12 +21,6 @@
         <img class="header__logo" src="img/logoPressidis.PNG" alt="">
         <div class="search-container">
           <input v-model="navegacion.inputValue" type="text" class="search-input" placeholder="Search...">
-          <div class="select is-warning is-rounded">
-            <select v-model="navegacion.tipoBusqueda">
-              <option value="1">Pàgina actual</option>
-              <option value="2">A tota la web</option>
-            </select>
-          </div>
           <img class="search-icon" src="img/search.png" alt="Search">
         </div>
       </div>
@@ -197,9 +191,11 @@
             <p class="carro total-price">€{{calcularPriceProduct(index)}}</p>
             <button class="btn-deleteCart" @click="deleteProduct(carrito.productesAddToCart,index)">
               <svg viewBox="0 0 15 17.5" height="17.5" width="15" xmlns="http://www.w3.org/2000/svg" class="icon">
-                <path transform="translate(-2.5 -1.25)" d="M15,18.75H5A1.251,1.251,0,0,1,3.75,17.5V5H2.5V3.75h15V5H16.25V17.5A1.251,1.251,0,0,1,15,18.75ZM5,5V17.5H15V5Zm7.5,10H11.25V7.5H12.5V15ZM8.75,15H7.5V7.5H8.75V15ZM12.5,2.5h-5V1.25h5V2.5Z" id="Fill"></path>
+                <path transform="translate(-2.5 -1.25)"
+                  d="M15,18.75H5A1.251,1.251,0,0,1,3.75,17.5V5H2.5V3.75h15V5H16.25V17.5A1.251,1.251,0,0,1,15,18.75ZM5,5V17.5H15V5Zm7.5,10H11.25V7.5H12.5V15ZM8.75,15H7.5V7.5H8.75V15ZM12.5,2.5h-5V1.25h5V2.5Z"
+                  id="Fill"></path>
               </svg>
-              </button>
+            </button>
           </div>
         </div>
       </div>
