--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
     <!-- TIENDA -->
     <div v-if="mostrar('tienda')" class="tienda-container">
       <button @click="mostrarFiltroAvanzado">click</button>
-      <div v-if="navegacion.showFiltroAvanzado">
+      <div :class="['filtro',{'shown':navegacion.showFiltroAvanzado===true}]">
         <!-- <input type="range" v-model="filter.maxPrice" min="0" max="100">
         <p>{{this.filter.maxPrice}}</p> -->
         <div class="select">
           <select v-model="filter.genre">
-            <option value="0">Selecciona gènere</option>
+            <option value="0" disabled>Selecciona gènere</option>
             <option v-for="actual in tienda.genres" :key="actual.id" :value="actual.id">{{actual.genre_name}}</option>
           </select>
         </div>
         <button @click="clearFilter">Netejar el filtre</button>
       </div>
-      <p>Productes: {{this.tienda.allProductes.length}}</p>
+      <p v-if="!filter.advancedFilter">Productes: {{this.tienda.allProductes.length}}</p>
+      <p v-else>Productes: {{this.tienda.productes.length}}</p>
       <div ref="productsList" class="tienda">
         <div v-for="(actual,index) in filterProducts" :key="index" class="product-container">
           <div class="cd-image-container">
